app/assets/stylesheets/catarse_bootstrap/_main.scss
/* ... */
.bootstrap-header-dropdown {
  position: relative;
  display: block;
  width: 27.3%;
  height: 38px;
  margin-top: 10px;
  margin-bottom: 0px;
  float: right;
  border-radius: 5px;
  background-color: #f1f4f4;
}
.bootstrap-header-dropdown-toggle {
  display: block;
  padding: 10px;
}
.bootstrap-header-dropdown-toggle.w--open {
  display: block;
  padding: 10px;
}
.bootstrap-header-dropdown-link {
  padding-top: 5px;
  padding-bottom: 5px;
  color: #3f4752;
}
.bootstrap-header-dropdown-link:hover {
  background-color: rgba(121, 128, 139, 0.09);
  text-decoration: none;
}
.bootstrap-header-dropdown-list.w--open {
  padding: 5px;
}
.project-nav-tab-group {
  display: inline-block;
  opacity: 1;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}
.project-nav-tab-group:hover {
  opacity: 1;
}
.project-dashboard-button {
  position: static;
  display: inline-block;
  width: 28.2%;
}
.back-payment-credit-card-radio-field {
  display: inline-block;
}
.radio-button-label-null {
  display: none;
}
.creditcard-records {
  margin-top: -1px;
  padding: 11px 14px;
  border: 1px solid #ddd;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}
.creditcard-records:hover {
  background-color: rgba(241, 244, 244, 0.36);
}
.creditcard-records.selected {
  position: relative;
  z-index: 1;
  border-color: #00b22d;
  background-color: rgba(241, 244, 244, 0.36);
}
.footer-full-signature-text {
  margin-bottom: 20px;
  color: white;
  font-weight: 600;
  text-transform: uppercase;
}
.footer-full-copyleft {
  margin-top: 80px;
  padding-top: 35px;
  border-top: 1px solid rgba(121, 128, 139, 0.27);
  color: rgba(241, 244, 244, 0.54);
  text-align: center;
}
.user-profile {
  position: relative;
  z-index: 15;
  width: 95px;
  margin-top: -10px;
  margin-right: 0px;
  float: right;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}
.dropdown-link {
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}
.dropdown-link:hover {
  background-color: #ddd;
  text-decoration: none;
}
.dropdown-list {
  position: absolute;
  z-index: 10;
  display: none;
  padding: 5px;
}
.dropdown-list.w--open {
  position: absolute;
  margin-top: 2px;
  border-radius: 5px;
  background-color: #f1f4f4;
  box-shadow: rgba(63, 71, 82, 0.81) 1px 1px 3px 0px;
}
.dropdown-list.user-menu.w--open {
  position: absolute;
  z-index: 30;
  width: 735px;
  margin-top: 8px;
  margin-left: -650px;
  padding: 21px;
}
.user-avatar {
  width: 35px;
  height: 35px;
  float: none;
  border-radius: 50%;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}
.user-avatar:hover {
  box-shadow: none;
  opacity: 0.5;
}
.dropdown-toggle {
  position: relative;
  display: block;
  padding: 10px 20px;
}
.dropdown-toggle.w--open {
  position: relative;
}
.divider {
  border-top: 1px solid #e9e9ec;
}
.text-success {
  color: #7cc142;
}
.header-search {
  position: relative;
  display: inline-block;
  width: 40%;
  height: 40px;
  margin-bottom: 0px;
  margin-left: 20px;
}
.u-text-center {
  text-align: center;
}
.header-logo {
  display: inline-block;
  width: 256px;
  max-width: 256px;
  margin-right: 20px;
  margin-left: 0px;
  padding: 0px;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}
.header-logo:hover {
  opacity: 0.5;
}
.fontweight-thin {
  font-weight: 100;
}
.fontweight-light {
  font-weight: 300;
}
.fontweight-semibold {
  font-weight: 600;
}
.fontweight-bold {
  font-weight: 700;
}
.u-marginbottom-30 {
  margin-bottom: 30px;
}
.u-marginbottom-60 {
  margin-bottom: 60px;
}
.u-marginbottom-80 {
  margin-bottom: 80px;
}
.u-right {
  float: right;
}
.u-right.logo-footer {
  margin-top: -13px;
}
.dropdown-icon {
  position: absolute;
  float: right;
}
.dropdown-icon.positive {
  color: #f1f4f4;
}
.postfix {
  position: absolute;
  display: inline-block;
  overflow-x: hidden;
  overflow-y: hidden;
  height: 40px;
  padding-top: 10px;
  float: none;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
}
.prefix {
  display: inline-block;
  padding-top: 10px;
  border-right-color: transparent;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
}
.btn-large {
  padding-top: 19px;
  padding-bottom: 19px;
  font-size: 18px;
  text-decoration: none;
}
.btn-medium {
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 16px;
  text-decoration: none;
}
.btn-small {
  height: 40px;
  padding-top: 9px;
  padding-bottom: 9px;
  font-size: 15px;
  text-decoration: none;
}
.btn-dark {
  border: 1px solid #3f4752;
  background-color: #3f4752;
  color: white;
  text-decoration: none;
}
.btn-dark:hover {
  border-color: #3f4752;
  background-color: #30353d;
}
.btn-dark.btn-attached {
  width: auto;
  border-color: rgba(255, 255, 255, 0.09);
  background-color: transparent;
}
.btn-secondary-dark {
  border: 1px solid white;
  background-color: transparent;
}
.header-lupa {
  display: inline-block;
  margin-right: 8px;
  margin-left: 8px;
  opacity: 1;
}
.footer-newsletter {
  display: inline-block;
  width: 86.4%;
}
.btn-edit {
  border-color: #4389bf;
  background-color: #4389bf;
  color: white;
  text-decoration: none;
}
.btn-edit:hover {
  border-color: #409bff;
  background-color: #3995db;
}
.btn-edit.btn-attached {
  width: auto;
}
.footer-news-icon {
  margin-right: 14px;
  margin-left: 14px;
}
.headline {
  margin-bottom: 20px;
  font-size: 22px;
  line-height: 33px;
  font-weight: 600;
}
.btn-fb {
  border: 1px solid #4b6fb8;
  background-color: #4b6fb8;
  color: white;
}
.btn-fb:hover {
  border-color: #547fd6;
  background-color: #547fd6;
}
.nav-tab {
  display: inline-block;
  height: 42px;
  margin-right: 5px;
  padding: 13px 13px 8px;
  border-bottom: 1px solid transparent;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
  color: #79808b;
  font-size: 15px;
  text-decoration: none;
}
/* ... */

